@@ -31,8 +31,8 @@
   <?php $imageInfo = $currentProduct->getImageInfo() ?>
   <div>
       <?php if ($imageInfo->hasLargeImage()) { ?>
-          <a href="<?php echo $net->absoluteURL($imageInfo->getLargeImage()) ?>" rel="lightbox[gallery]"><?php echo $html->image($imageInfo, ZMProducts::IMAGE_MEDIUM) ?></a>
-          <br><a href="<?php echo $net->absoluteURL($imageInfo->getLargeImage()) ?>" rel="lightbox[gallery]">CLick to enlarge - FTW!</a>
+          <a href="<?php echo $request->absoluteURL($imageInfo->getLargeImage()) ?>" rel="lightbox[gallery]"><?php echo $html->image($imageInfo, ZMProducts::IMAGE_MEDIUM) ?></a>
+          <br><a href="<?php echo $request->absoluteURL($imageInfo->getLargeImage()) ?>" rel="lightbox[gallery]">CLick to enlarge - FTW!</a>
           <br><?php if (function_exists('hover3_product_image_link')) { hover3_product_image_link($currentProduct, $imageInfo); } ?>
       <?php } else { ?>
           <?php echo $html->image($imageInfo, ZMProducts::IMAGE_MEDIUM) ?>
@@ -92,10 +92,10 @@
           <legend><?php zm_l10n("Additional Images") ?></legend>
           <?php foreach ($addImgList as $addImg) { ?>
               <?php if ($addImg->hasLargeImage()) { ?>
-                  <a href="<?php echo $net->absoluteURL($addImg->getLargeImage()) ?>" rel="lightbox[gallery]"><img src="<?php echo $net->absoluteURL($addImg->getDefaultImage()) ?>" alt="" title="" /></a>
+                  <a href="<?php echo $request->absoluteURL($addImg->getLargeImage()) ?>" rel="lightbox[gallery]"><img src="<?php echo $request->absoluteURL($addImg->getDefaultImage()) ?>" alt="" title="" /></a>
                   <br><?php if (function_exists('hover3_product_image_link')) { hover3_product_image_link($currentProduct, $addImg, false); } ?>
               <?php } else { ?>
-                  <img src="<?php echo $net->absoluteURL($addImg->getDefaultImage()) ?>" alt="" title="" />
+                  <img src="<?php echo $request->absoluteURL($addImg->getDefaultImage()) ?>" alt="" title="" />
               <?php } ?>
           <?php } ?>
       </fieldset>
