@@ -169,6 +169,8 @@ Release 0.9.9
 - actually use ZMStoreDefaultSeoRewriter
 - reduce toolbox dependencies
 - ZMUrlManager: fix merging of viewId specific mappings and controller defaults
+- moved absoluteURL from ZMToolboxNet to ZMRequest; affects product_info pages
+  (any type)
 
 Release 0.9.8
 - add Savant3 and experimental views (not used yet)
